<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_acknowledgements">Acknowledgements</string>
    <string name="about_dev_friends">Contributors</string>
    <string name="about_douyin">抖音</string>
    <string name="about_email">E-mail</string>
    <string name="about_feedback">Feedback</string>
    <string name="about_open_source_licenses">Open Source Licenses</string>
    <string name="about_qq_channel">QQ Channel</string>
    <string name="about_qq_group">QQ Group</string>
    <string name="about_version">Version</string>
    <string name="about_wechat_public">WeChat Official Account</string>
    <string name="about_weibo">Sina Weibo</string>
    <string name="about_xiaohongshu">小红书</string>
    <string name="account_safety">账号与安全</string>
    <string name="add_course_at_lease_one_period">At least one time period is needed.</string>
    <string name="add_course_change_color">Change Color</string>
    <string name="add_course_classroom">Classroom</string>
    <string name="add_course_date_mode">Date Mode</string>
    <string name="add_course_error_input_course_name">Please input the course name.</string>
    <string name="add_course_least_one_week">At least one week is needed.</string>
    <string name="add_course_lesson">Lesson %1$d</string>
    <string name="add_course_need_save_title">Need to save the current edits?</string>
    <string name="add_course_teacher">Teacher</string>
    <string name="add_course_time">Lesson %2$d - %3$d, %1$s</string>
    <string name="add_course_title_select_date_range">Select Date Range</string>
    <string name="add_course_title_select_time">Day &amp; Period</string>
    <string name="add_course_title_select_week">Select Weeks</string>
    <string name="add_course_week_mode">Week Mode</string>
    <string name="after_update_tips_msg">After the update, you can contact us for feedback on the About page. Appwidget may not work properly. Reboot the phone or delete the appwidget to add again can solve the problem. Thank you for using.</string>
    <string name="again_login_empty_hint">登录过期,请重新登录</string>
    <string name="ai_guide_dialog_confirm">开始体验</string>
    <string name="ai_guide_dialog_desc1">全学科覆盖，1V1互动解题</string>
    <string name="ai_guide_dialog_desc2">支持中英互译: 单词/词组/句子</string>
    <string name="ai_guide_dialog_title1">AI文字搜题</string>
    <string name="ai_guide_dialog_title2">AI单词查询</string>
    <string name="ai_writing_guide_content">拍照自动录入主题，一键AI生成</string>
    <string name="album_name_all">全部</string>
    <string name="album_name_cancel">取消</string>
    <string name="all_weeks">All</string>
    <string name="ambassador_tips_dialog_content">大使是快对君经过层层考核，选拔出的工作人员。他们在大学搜题酱里拥有独特的身份标识，并随时与快对汇报和沟通。他们是光荣的核心工作大使，承担着守护快对的责任。目前已面向部分省份开放招募，其他省份也将陆续开放，敬请等待！</string>
    <string name="ambassador_tips_dialog_title">大使认证说明</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer_desc">高校海量教材答案</string>
    <string name="app_bar_behavior">com.google.android.material.appbar.AppBarLayout.Behavior</string>
    <string name="app_name">WakeUp课程表</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="barcode_scan_hint_dialog_description">"当条形码有残缺或者无法扫描的可以试试
【输条码】"</string>
    <string name="barcode_scan_hint_dialog_subtitle">在每本书的背面找到条形码</string>
    <string name="barcode_scan_hint_dialog_title">条形码</string>
    <string name="bind_phone_error_phone_hint">请输入正确的手机号</string>
    <string name="bind_phone_title">绑定手机号</string>
    <string name="book_details_picture_browse_error_content">图片加载失败了,点击刷新重试一下</string>
    <string name="book_feed_back_title_grade">年级</string>
    <string name="book_hint_off">该书已下架, 暂不可查阅～</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="button_apply">使用(%1$d)</string>
    <string name="button_apply_default">确认</string>
    <string name="button_back">返回</string>
    <string name="button_edit">编辑</string>
    <string name="button_ok">我知道了</string>
    <string name="button_preview">预览</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera_base_ai_writing_middle_toast_text">"平行纸面，文字对齐参考线
对准主题或内容要求"</string>
    <string name="camera_base_ai_writing_tab_name">拍照写作</string>
    <string name="camera_base_cam_scanner_middle_toast_text">平行手机进行扫描</string>
    <string name="camera_base_default_middle_toast_text" />
    <string name="camera_base_default_tab_name" />
    <string name="camera_base_doc_scanner_tab_name">文件扫描</string>
    <string name="camera_base_essay_correct_middle_toast_text">"拍摄语文作文
文字与参考线平行"</string>
    <string name="camera_base_essay_correct_tab_name">语文作文批改</string>
    <string name="camera_base_extract_text_tab_name">提取文字</string>
    <string name="camera_base_fuse_middle_toast_text">"把整页放进屏幕
题目对齐参考线"</string>
    <string name="camera_base_fuse_tab_name">作业检查</string>
    <string name="camera_base_fuse_tab_name_jiancha">作业检查</string>
    <string name="camera_base_id_photo_tab_name">拍证件照</string>
    <string name="camera_base_multiple_middle_toast_text">"把整页放进屏幕
题目对齐参考线"</string>
    <string name="camera_base_multiple_tab_name">多张批改</string>
    <string name="camera_base_photo_middle_toast_text" />
    <string name="camera_base_photo_tab_name" />
    <string name="camera_base_scan_tab_name">扫码搜书</string>
    <string name="camera_base_search_composition_crop_tip_content">调整选框到作文题干，更容易搜到高质量范文</string>
    <string name="camera_base_search_composition_middle_toast_text">拍作文题目，找范文</string>
    <string name="camera_base_search_composition_tab_name">搜作文</string>
    <string name="camera_base_single_middle_toast_text">"平行纸面
题目放在框内识别更准确"</string>
    <string name="camera_base_single_tab_name">搜单题</string>
    <string name="camera_base_take_paper_middle_toast_text">"平行纸面，文字对齐参考线
请尽量包含题号信息"</string>
    <string name="camera_base_take_paper_tab_name">拍试卷</string>
    <string name="camera_base_to_word_middle_toast_text">平行纸面，文字对齐参考线</string>
    <string name="camera_base_to_word_tab_name">拍照转word</string>
    <string name="camera_base_translate_toast_text">平行纸面，文字对齐参考线</string>
    <string name="camera_base_whole_middle_toast_text">"平行纸面，文字对齐参考线
请尽量包含题号信息"</string>
    <string name="camera_base_whole_tab_name">搜整页</string>
    <string name="camera_base_writing_middle_toast_text">"拍摄练字作品
文字与参考线平行"</string>
    <string name="camera_base_writing_tab_name">练字检查</string>
    <string name="camera_base_wrong_middle_toast_text">"平行纸面，文字对齐参考线
请尽量包含题号信息"</string>
    <string name="camera_base_wrong_tab_name">拍错题</string>
    <string name="camera_max_limit_dialog_message">最多能拍%d张图片哦</string>
    <string name="camera_open_light_content">系统检测当前拍摄环境光线较弱会影响图片清晰度，请移至光线充足地方拍摄或者打开闪光灯拍摄吧~</string>
    <string name="camera_open_light_right_btn">打开闪光灯</string>
    <string name="camera_open_light_title">光线不足</string>
    <string name="camera_permission_failed">"获取相机权限失败，
请在设置中打开权限。"</string>
    <string name="camera_photo_check_dialog_title">清晰度不足</string>
    <string name="camera_sdk_access_storage_permission_desc">如需选取照片用于拍照搜题、意见反馈、客服、上传头像、 文档上传/下载等功能，需确认开启存储权限。</string>
    <string name="cancel">Cancel</string>
    <string name="captcha_empty_text">没有返回验证数据，请稍后重试</string>
    <string name="captcha_error_data_text">解析数据异常</string>
    <string name="captcha_error_text">验证异常，请稍后重试</string>
    <string name="capture_setting_double_click">双击拍照搜</string>
    <string name="capture_setting_flow">设置流程</string>
    <string name="capture_setting_long_click">长按3s关闭</string>
    <string name="capture_setting_open_desc">开启后，点击搜题按钮，随时截屏搜题</string>
    <string name="capture_setting_single_click">单击出答案</string>
    <string name="capture_setting_trans">隐形悬浮窗</string>
    <string name="capture_setting_trans_desc">隐形搜索，一触即发</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="client_service_central">客服中心</string>
    <string name="donate_alipay">Donate via Alipay</string>
    <string name="donate_feedback">Review on App Store</string>
    <string name="donate_follow_weibo">Follow our Sina Weibo</string>
    <string name="donate_message">Nice to meet you!</string>
    <string name="donate_view_list">Check the donation list</string>
    <string name="empty_text">还没有图片或视频</string>
    <string name="ok">OK</string>
    <string name="pic_search_day_time_limit">今日搜题过于频繁</string>
    <string name="pic_search_day_time_limit_tips">休息一下明日再来吧～</string>
    <string name="share_app">Share the App</string>
    <string name="title_about">About</string>
    <string name="update_dialog_huidu_update_info_text">大学搜题酱邀请你体验开发中的秘密版本，一起探索新功能～</string>
    <string name="update_dialog_no_wifi_text">非Wi-fi环境注意流量消耗</string>
    <string name="update_dialog_update_button_text">立即升级</string>
</resources>