<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:layout_gravity="center" android:orientation="vertical" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="280.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="end" android:id="@id/ib_close" android:padding="8.0dip" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/ic_outline_close_24" android:layout_marginEnd="8.0dip" style="@style/ButtonBackground" />
    <com.google.android.material.textview.MaterialTextView android:textStyle="bold" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-16.0dip" android:layout_marginBottom="8.0dip" android:text="ヾ(=･ω･=)o" />
    <com.google.android.material.textview.MaterialTextView android:textSize="12.0sp" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/donate_message" android:lineSpacingExtra="4.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
    <com.google.android.material.button.MaterialButton android:id="@id/tv_star" android:layout_marginTop="8.0dip" android:text="@string/donate_feedback" style="@style/DialogButtonStyle" />
    <com.google.android.material.button.MaterialButton android:id="@id/tv_weibo" android:text="@string/donate_follow_weibo" style="@style/DialogButtonStyle" />
    <com.google.android.material.button.MaterialButton android:id="@id/tv_share_app" android:text="@string/share_app" style="@style/DialogButtonStyle" />
    <com.google.android.material.button.MaterialButton android:id="@id/tv_donate" android:visibility="gone" android:text="@string/donate_alipay" style="@style/DialogButtonStyle" />
    <com.google.android.material.button.MaterialButton android:id="@id/tv_donate_list" android:visibility="gone" android:text="@string/donate_view_list" style="@style/DialogButtonStyle" />
</androidx.appcompat.widget.LinearLayoutCompat>
