<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="280.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
        <com.google.android.material.textview.MaterialTextView android:textStyle="bold" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_course_title_select_date_range" />
        <com.google.android.material.textview.MaterialTextView android:textColor="@color/mtrl_text_btn_text_color_selector" android:id="@id/tv_week_mode" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_course_week_mode" />
    </LinearLayout>
    <com.google.android.material.button.MaterialButtonToggleGroup android:id="@id/btn_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:checkedButton="@id/btn_start" app:selectionRequired="true" app:singleSelection="true">
        <com.google.android.material.button.MaterialButton android:id="@id/btn_start" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/Widget.Material3.Button.OutlinedButton" />
        <com.google.android.material.button.MaterialButton android:id="@id/btn_end" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/Widget.Material3.Button.OutlinedButton" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <DatePicker android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/date_picker" android:layout_width="fill_parent" android:layout_height="160.0dip" android:calendarViewShown="false" android:datePickerMode="spinner" />
    <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.google.android.material.button.MaterialButton android:id="@id/btn_cancel" android:layout_width="0.0dip" android:text="@string/cancel" android:layout_weight="1.0" style="@style/DialogButtonStyle" />
        <com.google.android.material.button.MaterialButton android:textStyle="bold" android:id="@id/btn_save" android:layout_width="0.0dip" android:text="@string/ok" android:layout_weight="1.0" style="@style/DialogButtonStyle" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
