<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/bottom_toolbar" android:layout_below="@id/toolbar" />
    <FrameLayout android:id="@id/selected_container" android:background="#66000000" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/toolbar">
        <ListView android:id="@id/selected_list" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="300.0dip" android:minHeight="0.0dip" />
    </FrameLayout>
    <RelativeLayout android:id="@id/toolbar" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="47.0dip">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/text_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <TextView android:textSize="18.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/selected_album" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/album_name_all" />
            <ImageView android:id="@id/iv_toolbar_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:src="@drawable/ic_arrow_down_24" />
        </LinearLayout>
        <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/close_album" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="47.0dip" android:text="@string/album_name_cancel" android:layout_alignParentRight="true" />
        <View android:background="#ffefefef" android:layout_width="fill_parent" android:layout_height="0.6dip" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/bottom_toolbar" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/button_preview" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="36.0dip">
            <ImageView android:layout_gravity="center" android:id="@id/iv_button_preview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="1.0dip" />
            <TextView android:textSize="12.0sp" android:textColor="?bottomToolbar.preview.textColor" android:layout_gravity="center" android:id="@id/tv_button_preview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_preview" android:includeFontPadding="false" />
        </LinearLayout>
        <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/button_apply" android:background="@drawable/zybang_matisse_color_gradual_change_bg" android:layout_width="260.0dip" android:layout_height="44.0dip" android:layout_marginLeft="37.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="8.0dip" android:text="@string/button_apply_default" android:layout_alignParentRight="true" android:layout_marginEnd="16.0dip" />
    </RelativeLayout>
    <FrameLayout android:id="@id/empty_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/bottom_toolbar" android:layout_below="@id/toolbar">
        <TextView android:textSize="16.0sp" android:textColor="?album.emptyView.textColor" android:gravity="center" android:layout_gravity="center" android:id="@id/empty_view_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty_text" android:drawableTop="?album.emptyView" android:drawablePadding="8.0dip" />
    </FrameLayout>
</RelativeLayout>
