<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="280.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textview.MaterialTextView android:textStyle="bold" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="8.0dip" android:text="@string/add_course_title_select_time" />
    <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="fill_parent" android:layout_height="200.0dip">
        <com.suda.yzune.wakeupschedule.widget.NumberPickerView android:id="@id/wp_day" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" app:npv_DividerColor="?colorPrimary" app:npv_RespondChangeOnDetached="false" app:npv_ShownCount="4" app:npv_TextColorNormal="?colorOnBackground" app:npv_TextColorSelected="?colorPrimary" app:npv_TextSizeNormal="14.0sp" app:npv_TextSizeSelected="14.0sp" app:npv_WrapSelectorWheel="true" />
        <com.suda.yzune.wakeupschedule.widget.NumberPickerView android:id="@id/wp_start" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" app:npv_DividerColor="?colorPrimary" app:npv_RespondChangeOnDetached="false" app:npv_ShownCount="4" app:npv_TextColorNormal="?colorOnBackground" app:npv_TextColorSelected="?colorPrimary" app:npv_TextSizeNormal="14.0sp" app:npv_TextSizeSelected="14.0sp" app:npv_WrapSelectorWheel="false" />
        <com.suda.yzune.wakeupschedule.widget.NumberPickerView android:id="@id/wp_end" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" app:npv_DividerColor="?colorPrimary" app:npv_RespondChangeOnDetached="false" app:npv_ShownCount="4" app:npv_TextColorNormal="?colorOnBackground" app:npv_TextColorSelected="?colorPrimary" app:npv_TextSizeNormal="14.0sp" app:npv_TextSizeSelected="14.0sp" app:npv_WrapSelectorWheel="false" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="8.0dip">
        <com.google.android.material.button.MaterialButton android:id="@id/btn_cancel" android:layout_width="0.0dip" android:text="@string/cancel" android:layout_weight="1.0" style="@style/DialogButtonStyle" />
        <com.google.android.material.button.MaterialButton android:textStyle="bold" android:id="@id/btn_save" android:layout_width="0.0dip" android:text="@string/ok" android:layout_weight="1.0" style="@style/DialogButtonStyle" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
