<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rlParent" android:layout_width="296.0dip" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
        <RelativeLayout android:id="@id/rl_head_back_ground" android:background="@drawable/icon_upgrade_background" android:layout_width="fill_parent" android:layout_height="131.0dip" />
        <RelativeLayout android:id="@id/rl_content" android:background="@drawable/upgrade_dialog_white_background_shape" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/rl_head_back_ground">
            <LinearLayout android:orientation="vertical" android:id="@id/ll_tips_info" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:textColor="#ff1b1e29" android:layout_gravity="center_horizontal" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" />
            </LinearLayout>
            <TextView android:textSize="14.0sp" android:textColor="#ff1b1e29" android:gravity="center_horizontal" android:id="@id/tv_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_20dp" android:layout_marginTop="12.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="7.0dip" android:text="@string/update_dialog_huidu_update_info_text" android:layout_below="@id/ll_tips_info" android:lineSpacingExtra="5.0dip" />
            <com.suda.yzune.wakeupschedule.aaa.widget.stateview.StateButton android:textSize="@dimen/common_text_size_n_32" android:textColor="#ffffffff" android:id="@id/setting_upgrade_btn" android:background="@drawable/upgrade_dialog_button_blue_shape" android:layout_width="236.0dip" android:layout_height="44.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="16.0dip" android:text="@string/update_dialog_update_button_text" android:layout_below="@id/tv_content" android:layout_centerHorizontal="true" />
            <TextView android:textSize="12.0sp" android:textColor="#ffa1a3ab" android:gravity="center" android:id="@id/tv_no_wifi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_20dp" android:text="@string/update_dialog_no_wifi_text" android:layout_below="@id/setting_upgrade_btn" />
        </RelativeLayout>
        <com.suda.yzune.wakeupschedule.aaa.widget.stateview.StateImageView android:id="@id/update_close" android:background="@drawable/icon_upgrade_dialog_close" android:visibility="gone" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="20.0dip" android:layout_below="@id/rl_content" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>
